--- a/about/index.html
+++ b/about/index.html
@@ -40,7 +40,7 @@
 <meta itemprop="name" content="About">
 <meta itemprop="description" content="I like building machine learning apps and training deep neural networks.">
 
-<meta itemprop="wordCount" content="66">
+<meta itemprop="wordCount" content="69">
 <meta itemprop="keywords" content="" /><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About"/>
 <meta name="twitter:description" content="I like building machine learning apps and training deep neural networks."/>
@@ -71,12 +71,6 @@
           <li class="list f5 f4-ns fw4 dib pr3">
             <a class="hover-white no-underline white-90" href="https://alagrine.github.io/about/" title="About page">
               About
-            </a>
-          </li>
-          
-          <li class="list f5 f4-ns fw4 dib pr3">
-            <a class="hover-white no-underline white-90" href="https://alagrine.github.io/contact/" title="Contact page">
-              Contact
             </a>
           </li>
           
@@ -163,13 +157,14 @@
         <p><figure><img src="https://alagrine.github.io/images/ALA.png"/>
 </figure>
 
-Hi, I&rsquo;m Ala Eddine GRINE.<br>
-<br>
-I&rsquo;m a <a href="https://graduation.udacity.com/confirm/e/0d20c814-dba3-11ed-9653-db707720509e">certified</a> data scientist professional with expertise in programming languages such as Python and Java, SQL databases, and data visualisation tools such as Tableau.<br>
-I hold a Master&rsquo;s degree in Telecommunication Engineering.<br>
-I am currently leading network analytics at <a href="https://www.ooredoo.tn/Personal/en/">Ooredoo TN</a>.<br>
-I am skilled for most data-science steps: data pre-processing, application of statistical methods, data visualization and results communication.</p>
-<p><a href="alaeddine.grine@gmail.com">alaeddine.grine@gmail.com</a></p>
+Hi, I&rsquo;m Ala Eddine GRINE.</p>
+<ul>
+<li>I&rsquo;m a <a href="https://graduation.udacity.com/confirm/e/0d20c814-dba3-11ed-9653-db707720509e">certified</a> data scientist professional with expertise in programming languages such as Python and Java, SQL databases, and data visualisation tools such as Tableau.</li>
+<li>I hold a Master&rsquo;s degree in Telecommunication Engineering.</li>
+<li>I&rsquo;m currently leading network analytics at <a href="https://www.ooredoo.tn/Personal/en/">Ooredoo TN</a>.</li>
+<li>I&rsquo;m skilled in most steps of data science: pre-processing data, applying statistical methods, building machine learning models, visualising data and communicating results.</li>
+</ul>
+<p><a href="mailto:alaeddine.grine@gmail.com">alaeddine.grine@gmail.com</a></p>
 
       </div>
     </article>
