--- a/about/index.html
+++ b/about/index.html
@@ -153,7 +153,7 @@
           About
         </h1>
       </header>
-      <div class="nested-copy-line-height lh-copy f4 nested-links mid-gray">
+      <div class="center nested-copy-line-height lh-copy f4 nested-links mid-gray">
         <p><figure><img src="https://alagrine.github.io/images/ALA.png"/>
 </figure>
 
