--- a/about/index.html
+++ b/about/index.html
@@ -146,7 +146,7 @@
 
     <main class="pb7" role="main">
       
-  <div class="mt2 mw8 center">
+  <div class="flex-l mt2 mw8 center">
     <article class="center cf pv5 ph3 ph4-ns mw7">
       <header>
         <h1 class="f1">
