--- a/index.html
+++ b/index.html
@@ -189,10 +189,8 @@
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          Project Overview: Negative online behaviors, like toxic comments, are likely to make people stop expressing themselves and leave a conversation.
-Platforms are struggling to facilitate conversations in an effective way, leading many communities to limit or shut down user comments altogether.
-Problem statement: I used a Kaggle dataset containing 159,571 comments from Wikipedia’s talk page edits. These comments were labeled for toxic behaviour by human raters.
-My goal is to build a multilabel classification model that’s capable of detecting different types of of toxicity like threats, obscenity, insults, and identity-based hate.
+          Project Overview: Negative online behaviors, like toxic comments, are likely to make people stop expressing themselves and leave a conversation. Platforms struggle to identify and flag potentially harmful or offensive online comments, leading many communities to restrict or shut down user comments altogether.
+Kaggle issued a challenge to build a multi-label classification model that&rsquo;s able to detect different types of toxicity like threats, obscenity and insults, and thus help make online discussion more productive and respectful.
         </div>
           <a href="https://alagrine.github.io/post/p5-toxic-comment-classification-with-tensorflow/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
         
