--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -204,16 +204,18 @@
                     techniques and machine learning algorithms.
                     We will start by building an ARIMA (AutoRegressive Integrated Moving Average) model, one of the most
                     widely used approaches to time series forecasting...
-                  </div>
-                  <br>
-                  <span class="badge badge-pill badge-success">Time series analysis</span>
-                  <span class="badge badge-pill badge-success">ARIMA</span>
-                  <span class="badge badge-pill badge-success">Tesnsorflow</span>
-                  <span class="badge badge-pill badge-success">Tsfresh</span>
-                  <a href="https://alagrine.github.io/post/p6-bitcoin_price_forecast/"
-                    class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read
-                    more</a>
+                    <br>
+                    <a href="https://alagrine.github.io/post/p6-bitcoin_price_forecast/"
+                      class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read
+                      more</a>
+                    <br>
+                    <!-- <span class="badge badge-pill badge-success">Time series analysis</span>
+                    <span class="badge badge-pill badge-success">ARIMA</span>
+                    <span class="badge badge-pill badge-success">Tesnsorflow</span>
+                    <span class="badge badge-pill badge-success">Tsfresh</span> -->
+                    <span style="background-color:powderblue;"> Time series analysis</span>
 
+                  </div>
                 </div>
               </div>
             </div>
