--- a/index.html
+++ b/index.html
@@ -204,18 +204,21 @@
                     techniques and machine learning algorithms.
                     We will start by building an ARIMA (AutoRegressive Integrated Moving Average) model, one of the most
                     widely used approaches to time series forecasting...
-                    <br>
-                    <a href="https://alagrine.github.io/post/p6-bitcoin_price_forecast/"
-                      class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read
-                      more</a>
-                    <br>
+
                     <!-- <span class="badge badge-pill badge-success">Time series analysis</span>
                     <span class="badge badge-pill badge-success">ARIMA</span>
                     <span class="badge badge-pill badge-success">Tesnsorflow</span>
                     <span class="badge badge-pill badge-success">Tsfresh</span> -->
-                    <span style="background-color:powderblue;"> Time series analysis</span>
+                    <br>
+                    <span style="background-color:goldenrod; border-radius: 25px; padding: 20px;">
+                      Time series analysis</span>
 
                   </div>
+                  <br>
+                  <a href="https://alagrine.github.io/post/p6-bitcoin_price_forecast/"
+                    class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read
+                    more</a>
+
                 </div>
               </div>
             </div>
