--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
 
 <head>
 
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
-
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
@@ -205,13 +202,15 @@
                     We will start by building an ARIMA (AutoRegressive Integrated Moving Average) model, one of the most
                     widely used approaches to time series forecasting...
 
-                    <!-- <span class="badge badge-pill badge-success">Time series analysis</span>
-                    <span class="badge badge-pill badge-success">ARIMA</span>
-                    <span class="badge badge-pill badge-success">Tesnsorflow</span>
-                    <span class="badge badge-pill badge-success">Tsfresh</span> -->
                     <br>
-                    <span style="background-color:goldenrod; border-radius: 25px; padding: 20px;">
+                    <span style="background-color:goldenrod; border-radius: 25px; padding: 6px;">
                       Time series analysis</span>
+                    <span style="background-color:goldenrod; border-radius: 25px; padding: 6px;">
+                      ARIMA</span>
+                    <span style="background-color:goldenrod; border-radius: 25px; padding: 6px;">
+                      Tesnsorflow</span>
+                    <span style="background-color:goldenrod; border-radius: 25px; padding: 6px;">
+                      Tsfresh</span>
 
                   </div>
                   <br>
