--- a/index.html
+++ b/index.html
@@ -204,13 +204,13 @@
                     widely used approaches to time series forecasting...
                     <br>
                     <br>
-                    <span style="background-color:MediumSeaGreen;color:#fff; border-radius: 25px; padding: 6px;">
+                    <span style="background-color:#14A44D;color:#fff; border-radius: 25px; padding: 5px;">
                       Time series analysis</span>
-                    <span style="background-color:MediumSeaGreen;color:#fff; border-radius: 25px; padding: 6px;">
+                    <span style="background-color:#14A44D;color:#fff; border-radius: 25px; padding: 5px;">
                       ARIMA</span>
-                    <span style="background-color:MediumSeaGreen; color:#fff; border-radius: 25px; padding: 6px;">
+                    <span style="background-color:#14A44D; color:#fff; border-radius: 25px; padding: 5px;">
                       Tesnsorflow</span>
-                    <span style="background-color:MediumSeaGreen; color:#fff; border-radius: 25px; padding: 6px;">
+                    <span style="background-color:#14A44D; color:#fff; border-radius: 25px; padding: 5px;">
                       Tsfresh</span>
 
                   </div>
