--- a/index.html
+++ b/index.html
@@ -255,8 +255,17 @@
                     comments altogether.
                     Kaggle issued a challenge to build a multi-label classification model that&rsquo;s able to detect
                     different types of toxicity like threats, obscenity and insults, and thus help make online
-                    discussion more productive and respectful.
+                    discussion more productive and respectful...
+                    <br>
+                    <br>
+                    <span style="background-color:#14A44D;color:#fff; border-radius: 25px; padding: 5px;">
+                      Tensorflow</span>
+                    <span style="background-color:#14A44D;color:#fff; border-radius: 25px; padding: 5px;">
+                      NLP</span>
+                    <span style="background-color:#14A44D; color:#fff; border-radius: 25px; padding: 5px;">
+                      Classification</span>
                   </div>
+                  <br>
                   <a href="https://alagrine.github.io/post/p5-toxic-comment-classification-with-tensorflow/"
                     class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read
                     more</a>
@@ -295,8 +304,17 @@
                     telecommunications, e-commerce, and streaming services. Predicting churn is critical, as customer
                     retention is the main driver of a company’s revenue.
                     For this project, Udacity provided a 12GB dataset of customer activity from Sparkify, a fictional
-                    music streaming service similar to Spotify or Pandora.
+                    music streaming service similar to Spotify or Pandora...
+                    <br>
+                    <br>
+                    <span style="background-color:#14A44D;color:#fff; border-radius: 25px; padding: 5px;">
+                      PySpark</span>
+                    <span style="background-color:#14A44D;color:#fff; border-radius: 25px; padding: 5px;">
+                      Spark MLlib</span>
+                    <span style="background-color:#14A44D; color:#fff; border-radius: 25px; padding: 5px;">
+                      AWS</span>
                   </div>
+                  <br>
                   <a href="https://alagrine.github.io/post/p4-sparkify-churn-prediction/"
                     class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read
                     more</a>
