--- a/index.html
+++ b/index.html
@@ -313,6 +313,8 @@
                       Spark MLlib</span>
                     <span style="background-color:#14A44D; color:#fff; border-radius: 25px; padding: 5px;">
                       AWS</span>
+                    <span style="background-color:#14A44D; color:#fff; border-radius: 25px; padding: 5px;">
+                      Big Data</span>
                   </div>
                   <br>
                   <a href="https://alagrine.github.io/post/p4-sparkify-churn-prediction/"
