--- a/index.html
+++ b/index.html
@@ -194,24 +194,25 @@
                   </h1>
                   <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
                     Project Overview: Time series forecasting is one of the most widely used data science techniques in
-                    business and finance to make future strategic decisions.
+                    business and finance to
+                    make future strategic decisions.
                     <br>
-                    In this project we will forecast daily closing price series of Bitcoin, a peer-to-peer online
-                    currency, using the historical price of Bitcoin.
+                    In this project, we will forecast daily closing price series of <a
+                      href="https://coinmarketcap.com/currencies/bitcoin/">Bitcoin</a>, a peer-to-peer online currency,
+                    using its historical price.
+                    <br>
                     We will follow different approaches to time series forecasting, implementing both statistical
-                    techniques and machine learning algorithms.
-                    We will start by building an ARIMA (AutoRegressive Integrated Moving Average) model, one of the most
-                    widely used approaches to time series forecasting...
+                    techniques and machine learning algorithms...
                     <br>
                     <br>
                     <span style="background-color:#14A44D;color:#fff; border-radius: 25px; padding: 5px;">
                       Time series analysis</span>
                     <span style="background-color:#14A44D;color:#fff; border-radius: 25px; padding: 5px;">
+                      Exponontiel Smoothing</span>
+                    <span style="background-color:#14A44D; color:#fff; border-radius: 25px; padding: 5px;">
                       ARIMA</span>
                     <span style="background-color:#14A44D; color:#fff; border-radius: 25px; padding: 5px;">
                       Tesnsorflow</span>
-                    <span style="background-color:#14A44D; color:#fff; border-radius: 25px; padding: 5px;">
-                      Tsfresh</span>
 
                   </div>
                   <br>
