--- a/index.html
+++ b/index.html
@@ -3,11 +3,6 @@
 
 <head>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
-
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
@@ -210,10 +205,14 @@
                     techniques and machine learning algorithms...
                     <br>
                     <br>
-                    <span class="badge badge-pill badge-success">Time series analysis</span>
-                    <span class="badge badge-pill badge-success">Exponontiel Smoothing</span>
-                    <span class="badge badge-pill badge-success">ARIMA</span>
-                    <span class="badge badge-pill badge-success">Tesnsorflow</span>
+                    <span style="background-color:#14A44D;color:#fff; border-radius: 25px; padding: 5px;">
+                      Time series analysis</span>
+                    <span style="background-color:#14A44D;color:#fff; border-radius: 25px; padding: 5px;">
+                      Exponontiel Smoothing</span>
+                    <span style="background-color:#14A44D; color:#fff; border-radius: 25px; padding: 5px;">
+                      ARIMA</span>
+                    <span style="background-color:#14A44D; color:#fff; border-radius: 25px; padding: 5px;">
+                      Tesnsorflow</span>
 
                   </div>
                   <br>
