Update index file

--- a/index.html
+++ b/index.html
@@ -192,6 +192,69 @@
 
       <section class="w-100 mw8">
 
+        <!-- LinkedIn Job Scraper and Matcher -->
+
+        <div class="relative w-100 mb4">
+
+          <article class="bb b--black-10">
+            <div class="db pv4 ph3 ph0-l no-underline dark-gray">
+              <div class="flex flex-column flex-row-ns">
+
+
+                <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
+                  <a href="https://alagrine.github.io/post/p7-linkedin_scraper_matcher/" class="db grow">
+                    <img src="https://alagrine.github.io/images/P7/Leonardo_Diffusion_XL_LinkedIn_Job_scraping_2.jpg"
+                      class="img" alt="image from LinkedIn Job Scraper and Matcher">
+                  </a>
+                </div>
+
+                <div class="blah w-100 w-60-ns pl3-ns">
+                  <h1 class="f3 fw1 athelas mt0 lh-title">
+                    <a href="https://alagrine.github.io/post/p7-linkedin_scraper_matcher/"
+                      class="color-inherit dim link">
+                      LinkedIn Job Scraper and Matcher
+                    </a>
+                  </h1>
+                  <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+                    <strong>Project Overview:</strong> If you're looking for a job, say a data science role, you're
+                    probably using Linkedin Jobs. But with hundreds of jobs posted every day, it can be hard to find the
+                    ones that best match your skills.
+                    <br>
+                    <strong>Problem statement:</strong> The main purpose of this project is to help you find the best
+                    matching jobs automatically.
+                    <br>
+                    <strong>Process:</strong> - Built a Linkedin job scraper using Selenium, Requests and BeautifulSoup.
+                    - Built a text analysis using Spacy.
+                    - Developed a Flask app to display data visualisations, including a word cloud of in-demand
+                    skills.
+                    The app highlights job-specific skills and keywords, compares them to your skills and generates
+                    a
+                    list of the most relevant job matches.
+                    </ol>
+                    <br><br>
+                    <div class="badge_container">
+                      <span class="badge">WEB Scraping</span>
+                      <span class="badge">Selenium</span>
+                      <span class="badge">BeautifulSoup</span>
+                      <span class="badge">NLP</span>
+                      <span class="badge">Spacy</span>
+                      <span class="badge">Flask</span>
+                    </div>
+                  </div>
+                  <br>
+                  <a href="https://alagrine.github.io/post/p6-bitcoin_price_forecast/"
+                    class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read
+                    more</a>
+
+                </div>
+              </div>
+            </div>
+          </article>
+
+        </div>
+
+
+        <!-- Forecasting Bitcoin closing price series -->
 
         <div class="relative w-100 mb4">
 
