--- a/index.html
+++ b/index.html
@@ -223,15 +223,15 @@
                     <strong>Problem statement:</strong> The main purpose of this project is to help you find the best
                     matching jobs automatically.
                     <br>
-                    <strong>Process:</strong> - Built a Linkedin job scraper using Selenium, Requests and BeautifulSoup.
-                    - Built a text analysis using Spacy.
-                    - Developed a Flask app to display data visualisations, including a word cloud of in-demand
-                    skills.
-                    The app highlights job-specific skills and keywords, compares them to your skills and generates
-                    a
-                    list of the most relevant job matches.
-                    </ol>
-                    <br><br>
+                    <strong>Process:</strong> In this project, I:
+                    <ul>
+                      <li>Built a Linkedin job scraper using Selenium, Requests and BeautifulSoup.
+                      </li>
+                      <li>Built a text analysis using Spacy.</li>
+                      <li>Developed a Flask app to display data visualisations, including a word cloud of in-demand
+                        skills. The app highlights job-specific skills and keywords, compares them to your skills and
+                        generates a list of the most relevant job matches.</li>
+                    </ul>
                     <div class="badge_container">
                       <span class="badge">WEB Scraping</span>
                       <span class="badge">Selenium</span>
