--- a/about/index.html
+++ b/about/index.html
@@ -239,15 +239,15 @@
         </div> -->
         <div class="nested-copy-line-height lh-copy f4 nested-links mid-gray center">
           <img style="margin: 10px" src="../images/SVGs/python.svg" alt="Python" height="50" />
-          <img style="margin: 10px" src="../images/SVGs/Pandas.svg" alt="Pandas" height="50" />
           <img style="margin: 10px" src="../images/SVGs/tensorflow.svg" alt="Tensorflow" height="50" />
-          <img style="margin: 10px" src="../images/SVGs/sklearn.svg" alt="Sklearn" height="50" />
+          <img style="margin: 10px" src="../images/SVGs/pytorch-ar21.svg" alt="PyTorch" height="50" />
           <img style="margin: 10px" src="../images/SVGs/apache_spark.svg" alt="apache_spark" height="50" />
-          <img style="margin: 10px" src="../images/SVGs/flask.svg" alt="Flask" height="50" />
+          <img style="margin: 10px" src="../images/SVGs/sklearn.svg" alt="Sklearn" height="50" />
+          <img style="margin: 10px" src="../images/SVGs/Pandas.svg" alt="Pandas" height="50" />
           <img style="margin: 10px" src="../images/SVGs/java.svg" alt="Java" height="50" />
           <img style="margin: 10px" src="../images/SVGs/Tableau.svg" alt="Tableau" height="50" />
+          <img style="margin: 10px" src="../images/SVGs/flask.svg" alt="Flask" height="50" />
           <img style="margin: 10px" src="../images/SVGs/html5.svg" alt="HTML5" height="50" />
-          <img style="margin: 10px" src="../images/SVGs/bootstrap.svg" alt="Bootstrap" height="50" />
           <img style="margin: 10px" src="../images/SVGs/mysql.svg" alt="Mysql" height="50" />
           <img style="margin: 10px" src="../images/SVGs/oracle.svg" alt="Oracle" height="50" />
           <img style="margin: 10px" src="../images/SVGs/sas.svg" alt="SAS" height="50" />
